<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KeyActivity">

    <Button
        android:id="@+id/btnScan"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnScan"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnKey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/btnKey"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btnKey"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnHistory"
        app:layout_constraintStart_toEndOf="@+id/btnScan"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnHistory"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnKey"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/tvKey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnKey" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHistory">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/hint"
            android:inputType="number" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnOk"
            android:textSize="18sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btn1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btn2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btn3"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btn4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btn5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btn6"
                android:textSize="18sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btn7"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btn8"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btn9"
                android:textSize="18sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnClear"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btnClear"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn0"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btn0"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnBack"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/btnBack"
                android:textSize="18sp" />
        </TableRow>


    </TableLayout>


</android.support.constraint.ConstraintLayout>